// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas sobre Gif debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GiftExperApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="one punch"
      key="one punch"
    />
    <GifGrid
      category="dragon ball"
      key="dragon ball"
    />
  </ol>
</Fragment>
`;

exports[`pruebas sobre Gif debe hacer match con el snapshot 1`] = `
<Fragment>
  <h2>
    GiftExperApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
